--- a/index.html
+++ b/index.html
@@ -184,36 +184,62 @@
     <div class="container">
         <header>
             <h1>Marcio Tellez</h1>
-            <p>Bienvenido a mi página personal</p>
+            <p>Welcome to My_Page</p>
         </header>
 
         <div class="content">
             <section class="section">
-                <h2>Acerca de Mí</h2>
+                <h2>About me</h2>
                 <p>
-                    Hola, soy Marcio Tellez. Esta es mi página personal donde comparto información sobre mí, 
-                    mis habilidades y mis proyectos. Estoy apasionado por la tecnología y siempre estoy 
-                    aprendiendo cosas nuevas.
+                    I´ve always been in love with sports, especially motor sports and cars. 
+                    As in today I look forward to finding a workplace where I can show my 
+                    skills and help however I can.
                 </p>
             </section>
 
             <section class="section">
-                <h2>Habilidades</h2>
+                <h2>Skills</h2>
                 <div class="skills">
+                    <span class="skill-tag">SQL</span>
+                    <span class="skill-tag">Pyton</span>
+                    <span class="skill-tag">Java</span>
+                    <span class="skill-tag">C#</span>
                     <span class="skill-tag">HTML</span>
-                    <span class="skill-tag">CSS</span>
-                    <span class="skill-tag">JavaScript</span>
-                    <span class="skill-tag">Git</span>
+                    <span class="skill-tag">Cassandra</span>
                     <span class="skill-tag">GitHub</span>
-                    <span class="skill-tag">Desarrollo Web</span>
+                    <span class="skill-tag">Pyspark</span>
+                    <span class="skill-tag">MongoDB</span>
+                    <span class="skill-tag">MySQL</span>
+                    <span class="skill-tag">PostgreSQL</span>
+                    <span class="skill-tag">Excel</span>
+                    <span class="skill-tag">Unity</span>
+                    <span class="skill-tag">Visual Studio</span>
+                    <span class="skill-tag">Docker</span>
+                    <span class="skill-tag">English</span>
+                    <span class="skill-tag">Spanish</span>
+                    <span class="skill-tag">German</span>
+                    <span class="skill-tag">Italian</span>
                 </div>
             </section>
 
             <section class="section">
-                <h2>Proyectos</h2>
+                <h2>Experiance</h2>
                 <p>
-                    Aquí puedes agregar información sobre tus proyectos. Puedes incluir enlaces a repositorios 
-                    de GitHub, demos en vivo, o descripciones de lo que has construido.
+                    S&P INTERN - (MAY 2025 - PRESENT DAY 2025)
+                    DIDI - MEXICO CITY
+                    I collect, analyze, and visualize data to help organizations make informed business decisions.
+                    BI INTERN - (JANUARY 2025 - MAY 2025)
+                    DIDI - MEXICO CITY
+                    I collect, analyze, and visualize data to help organizations make informed business decisions.
+                    HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025) 
+                    HULT PRIZE - MONTERRY, MEXICO
+                    I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.
+                    PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024) 
+                    TERA - MEXICO CITY
+                    Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.
+                    MECHANIC AND DISIGNER - (SEMPTEMBER 2023 - DECEMBER 2024) 
+                    COLMILLOS RACING TEAM - MEXICO CITY
+                    Worked on the mechanics and design of the car. 
                 </p>
             </section>
 
@@ -222,15 +248,15 @@
                 <div class="contact">
                     <div class="contact-item">
                         <strong>GitHub</strong><br>
-                        <a href="https://github.com/TellezMarcio" target="_blank">@TellezMarcio</a>
+                        <a href="https://github.com/TellezM" target="_blank">@TellezM</a>
                     </div>
                     <div class="contact-item">
                         <strong>Email</strong><br>
-                        <a href="mailto:tu-email@ejemplo.com">tu-email@ejemplo.com</a>
+                        <a href="mailto: marciotellezro@gmail.com"> Marcio Tellez</a>
                     </div>
                     <div class="contact-item">
                         <strong>LinkedIn</strong><br>
-                        <a href="#" target="_blank">Mi Perfil</a>
+                        <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank"> Marcio Tellez </a>
                     </div>
                 </div>
             </section>
