corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -224,23 +224,23 @@
 
             <section class="section">
                 <h2>Experiance</h2>
-                <p>
-                    S&P INTERN - (MAY 2025 - PRESENT DAY 2025)
-                    DIDI - MEXICO CITY
-                    I collect, analyze, and visualize data to help organizations make informed business decisions.
-                    BI INTERN - (JANUARY 2025 - MAY 2025)
-                    DIDI - MEXICO CITY
-                    I collect, analyze, and visualize data to help organizations make informed business decisions.
-                    HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025) 
-                    HULT PRIZE - MONTERRY, MEXICO
-                    I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.
-                    PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024) 
-                    TERA - MEXICO CITY
-                    Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.
-                    MECHANIC AND DISIGNER - (SEMPTEMBER 2023 - DECEMBER 2024) 
-                    COLMILLOS RACING TEAM - MEXICO CITY
-                    Worked on the mechanics and design of the car. 
-                </p>
+                <div class="experiance">
+                    <p>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</p>
+                    <p>DIDI - MEXICO CITY</p>
+                    <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+                    <p>BI INTERN - (JANUARY 2025 - MAY 2025)</p>
+                    <p>DIDI - MEXICO CITY</p>
+                    <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+                    <p>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</p>
+                    <p>HULT PRIZE - MONTERRY, MEXICO</p>
+                    <p>I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.</p>
+                    <p>PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024)</p>
+                    <p>TERA - MEXICO CITY</p>
+                    <p>Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.</p>
+                    <p>MECHANIC AND DISIGNER - (SEMPTEMBER 2023 - DECEMBER 2024)</p>
+                    <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
+                    <p>Worked on the mechanics and design of the car.</p>
+                </div>
             </section>
 
             <section class="section">
