--- a/index.html
+++ b/index.html
@@ -225,21 +225,35 @@
             <section class="section">
                 <h2>Experiance</h2>
                 <div class="experiance">
-                    <p>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</p>
-                    <p>DIDI - MEXICO CITY</p>
-                    <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    <p>BI INTERN - (JANUARY 2025 - MAY 2025)</p>
-                    <p>DIDI - MEXICO CITY</p>
-                    <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    <p>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</p>
-                    <p>HULT PRIZE - MONTERRY, MEXICO</p>
-                    <p>I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.</p>
-                    <p>PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024)</p>
-                    <p>TERA - MEXICO CITY</p>
-                    <p>Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.</p>
-                    <p>MECHANIC AND DISIGNER - (SEMPTEMBER 2023 - DECEMBER 2024)</p>
-                    <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
-                    <p>Worked on the mechanics and design of the car.</p>
+                    <article class="Trabajo">
+                        <h3>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</h3>
+                        <p>DIDI - MEXICO CITY</p>
+                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+                    </article>
+
+                    <article class="Trabajo">
+                        <h3>BI INTERN - (JANUARY 2025 - MAY 2025)</h3>
+                        <p>DIDI - MEXICO CITY</p>
+                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+                    </article>
+
+                    <article class="Trabajo">
+                        <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
+                        <p>HULT PRIZE - MONTERRY, MEXICO</p>
+                        <p>I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.</p>
+                    </article>
+
+                    <article class="Trabajo">
+                        <h3>PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024)</h3>
+                        <p>TERA - MEXICO CITY</p>
+                        <p>Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.</p>
+                    </article>
+
+                    <article class="Trabajo">
+                        <h3>MECHANIC AND DISIGNER - (SEMPTEMBER 2023 - DECEMBER 2024)</h3>
+                        <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
+                        <p>Worked on the mechanics and design of the car.</p>
+                    </article>
                 </div>
             </section>
 
