--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1232c0 0%, #b60505 100%);
             min-height: 100vh;
         }
 
@@ -116,7 +116,7 @@
         }
 
         .contact-item a {
-            color: #667eea;
+            color: #2645d1;
             text-decoration: none;
             font-weight: 600;
         }
