--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         }
 
         .section h2 {
-            color: #667eea;
+            color: #112ca7;
             font-size: 2em;
             margin-bottom: 20px;
             padding-bottom: 10px;
-            border-bottom: 3px solid #667eea;
+            border-bottom: 3px solid #112ca7;
         }
 
         .section p {
