--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         }
 
         .skill-tag {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
             color: white;
             padding: 10px 20px;
             border-radius: 25px;
