--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #1232c0 0%, #b60505 100%);
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
             min-height: 100vh;
         }
 
