--- a/index.html
+++ b/index.html
@@ -187,94 +187,103 @@
             <p>Welcome to My_Page</p>
         </header>
 
-        <div class="content">
-            <section class="section">
-                <h2>About me</h2>
-                <p>
-                    I´ve always been in love with sports, especially motor sports and cars. 
-                    As in today I look forward to finding a workplace where I can show my 
-                    skills and help however I can.
-                </p>
-            </section>
+        <!-- ABOUT ME -->
+        <section class="card">
+            <h2>About me</h2>
+            <p>I’ve always been in love with sports, especially motor sports and cars. I look forward to finding a workplace where I can show my skills and help however I can.</p>
+        </section>
 
-            <section class="section">
-                <h2>Skills</h2>
-                <div class="skills">
-                    <span class="skill-tag">SQL</span>
-                    <span class="skill-tag">Pyton</span>
+        <!-- SKILLS with categories -->
+        <section class="card">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>Programming Languages</h3>
+                    <span class="skill-tag">Python</span>
                     <span class="skill-tag">Java</span>
                     <span class="skill-tag">C#</span>
-                    <span class="skill-tag">HTML</span>
-                    <span class="skill-tag">Cassandra</span>
-                    <span class="skill-tag">GitHub</span>
-                    <span class="skill-tag">Pyspark</span>
-                    <span class="skill-tag">MongoDB</span>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Databases</h3>
                     <span class="skill-tag">MySQL</span>
                     <span class="skill-tag">PostgreSQL</span>
+                    <span class="skill-tag">MongoDB</span>
+                    <span class="skill-tag">Cassandra</span>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Data & Tools</h3>
+                    <span class="skill-tag">Pyspark</span>
                     <span class="skill-tag">Excel</span>
+                    <span class="skill-tag">GitHub</span>
+                    <span class="skill-tag">Docker</span>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Software</h3>
                     <span class="skill-tag">Unity</span>
                     <span class="skill-tag">Visual Studio</span>
-                    <span class="skill-tag">Docker</span>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Languages</h3>
                     <span class="skill-tag">English</span>
                     <span class="skill-tag">Spanish</span>
                     <span class="skill-tag">German</span>
                     <span class="skill-tag">Italian</span>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <section class="section">
-                <h2>Experiance</h2>
-                <div class="experiance">
-                    <article class="Trabajo">
-                        <h3>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</h3>
-                        <p>DIDI - MEXICO CITY</p>
-                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    </article>
+        <!-- EXPERIENCE -->
+        <section class="card">
+            <h2>Experience</h2>
+            <article>
+                <h3>S&P INTERN - (MAY 2025 - PRESENT)</h3>
+                <p>DIDI - MEXICO CITY</p>
+                <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+            </article>
+            <article>
+                <h3>BI INTERN - (JANUARY 2025 - MAY 2025)</h3>
+                <p>DIDI - MEXICO CITY</p>
+                <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+            </article>
+            <article>
+                <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
+                <p>HULT PRIZE - MONTERREY, MEXICO</p>
+                <p>I was developing and pitching an innovative, socially impactful business idea.</p>
+            </article>
+            <article>
+                <h3>PEDAGOGICAL ACTIVITIES PROGRAMMER - (JANUARY 2024 - DECEMBER 2024)</h3>
+                <p>TERA - MEXICO CITY</p>
+                <p>Designed and developed Unity-based computer activities for children aged 6–12.</p>
+            </article>
+            <article>
+                <h3>MECHANIC AND DESIGNER - (SEPTEMBER 2023 - DECEMBER 2024)</h3>
+                <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
+                <p>Worked on the mechanics and design of the car.</p>
+            </article>
+        </section>
 
-                    <article class="Trabajo">
-                        <h3>BI INTERN - (JANUARY 2025 - MAY 2025)</h3>
-                        <p>DIDI - MEXICO CITY</p>
-                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
-                        <p>HULT PRIZE - MONTERRY, MEXICO</p>
-                        <p>I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024)</h3>
-                        <p>TERA - MEXICO CITY</p>
-                        <p>Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>MECHANIC AND DISIGNER - (SEMPTEMBER 2023 - DECEMBER 2024)</h3>
-                        <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
-                        <p>Worked on the mechanics and design of the car.</p>
-                    </article>
+        <!-- CONTACT -->
+        <section class="card">
+            <h2>Contact</h2>
+            <div class="contact">
+                <div class="contact-item">
+                    <strong>GitHub</strong><br>
+                    <a href="https://github.com/TellezM" target="_blank">@TellezM</a>
                 </div>
-            </section>
-
-            <section class="section">
-                <h2>Contacto</h2>
-                <div class="contact">
-                    <div class="contact-item">
-                        <strong>GitHub</strong><br>
-                        <a href="https://github.com/TellezM" target="_blank">@TellezM</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>Email</strong><br>
-                        <a href="mailto: marciotellezro@gmail.com"> Marcio Tellez</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>LinkedIn</strong><br>
-                        <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank"> Marcio Tellez </a>
-                    </div>
+                <div class="contact-item">
+                    <strong>Email</strong><br>
+                    <a href="mailto:marciotellezro@gmail.com">Marcio Tellez</a>
                 </div>
-            </section>
-        </div>
+                <div class="contact-item">
+                    <strong>LinkedIn</strong><br>
+                    <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank">Marcio Tellez</a>
+                </div>
+            </div>
+        </section>
 
         <footer>
             <p>&copy; 2024 Marcio Tellez. Todos los derechos reservados.</p>
